--- a/root/projects/web-client/source/web/WEB-INF/web.xml
+++ b/root/projects/web-client/source/web/WEB-INF/web.xml
@@ -195,20 +195,24 @@
       <url-pattern>/wcs/*</url-pattern>
    </filter-mapping>
    
+   <!-- ALF-21521 
    <filter-mapping>
       <filter-name>Global Authentication Filter</filter-name>
       <url-pattern>/api/*</url-pattern>
    </filter-mapping>
+   -->
 
    <filter-mapping>
       <filter-name>WebDAV Authentication Filter</filter-name>
       <url-pattern>/webdav/*</url-pattern>
    </filter-mapping>
 
+   <!-- ALF-21757 and ALF-21521 disable for mobile apps
    <filter-mapping>
       <filter-name>WebDAV Authentication Filter</filter-name>
       <url-pattern>/cmisatom/*</url-pattern>
    </filter-mapping>
+   -->
 
    <filter-mapping>
       <filter-name>X509AuthFilter</filter-name>
