--- a/root/packaging/file-transfer-receiver/pom.xml
+++ b/root/packaging/file-transfer-receiver/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>alfresco-packaging</artifactId>
         <groupId>org.alfresco</groupId>
-        <version>5.2.g</version>
+        <version>5.2.g.ecm4u.1</version>
     </parent>
 
     <dependencies>
