--- a/root/pom.xml
+++ b/root/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <artifactId>alfresco-parent</artifactId>
   <packaging>pom</packaging>
-  <version>5.2.g</version>
+  <version>5.2.g.ecm4u.1</version>
   <name>Alfresco</name>
 
   <licenses>
@@ -53,16 +53,18 @@
     </pluginRepository>
   </pluginRepositories>
 
-  <distributionManagement>
-      <repository>
-          <id>alfresco-internal</id>
-          <url>https://artifacts.alfresco.com/nexus/content/repositories/internal-staging</url>
-      </repository>
-      <snapshotRepository>
-          <id>alfresco-internal-snapshots</id>
-          <url>${maven.distributionManagement.snapshot.url}</url>
-      </snapshotRepository>
-  </distributionManagement>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ecm4u-snapshots</id>
+            <name>ecm4u Snapshots</name>
+            <url>http://artifacts.ecm4u.intra:8081/artifactory/ecm4u-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>ecm4u-releases</id>
+            <name>ecm4u Snapshots</name>
+            <url>http://artifacts.ecm4u.intra:8081/artifactory/ecm4u-releases/</url>
+        </repository>
+    </distributionManagement>
 
   <modules>
     <module>projects/3rd-party</module>
@@ -771,6 +773,7 @@
         </plugin>
 
         <!-- Configure deployment of releases to Staging area of Nexus -->
+        <!--
         <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -787,6 +790,7 @@
                 </tags>
             </configuration>
         </plugin>
+        -->
     </plugins>
 
     <!-- Defining version and some configuration of Maven plugins -->
