--- a/root/projects/solr/pom.xml
+++ b/root/projects/solr/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>alfresco-parent</artifactId>
         <groupId>org.alfresco</groupId>
-        <version>5.2.g</version>
+        <version>5.2.g.ecm4u.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
