--- a/root/projects/repository/pom.xml
+++ b/root/projects/repository/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-legacy-lucene</artifactId>
-            <version>5.1.g</version>
+            <version>5.1.g.ecm4u.2</version>
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
@@ -778,7 +778,7 @@
         <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-legacy-lucene</artifactId>
-            <version>5.1.g</version>
+            <version>5.1.g.ecm4u.2</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
