--- a/root/projects/solr/pom.xml
+++ b/root/projects/solr/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-legacy-lucene</artifactId>
-            <version>5.1.g</version>
+            <version>5.1.g.ecm4u.2</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.lucene</groupId>
