use alfresco-data-model:6.16.ecm4u.1 including switch for MLText

--- a/root/projects/repository/config/alfresco/repository.properties
+++ b/root/projects/repository/config/alfresco/repository.properties
@@ -1239,3 +1239,7 @@ system.email.sender.default=noreply@alfresco.com
 # reset password workflow will expire in an hour
 system.reset-password.endTimer=PT1H
 system.reset-password.sendEmailAsynchronously=true
+
+# Switch to disable MLText default behaviour.
+# https://github.com/ecm4u/alfresco-ce-repository/issues/2
+ecm4u.mltext.disable=false
