fixes #3 by making deleteEmptyDirs a configurable property

--- a/root/projects/repository/config/alfresco/repository.properties
+++ b/root/projects/repository/config/alfresco/repository.properties
@@ -7,6 +7,7 @@ repository.name=Main Repository
 dir.root=./alf_data
 
 dir.contentstore=${dir.root}/contentstore
+dir.contentstore.deleteEmpytDirs=true
 dir.contentstore.deleted=${dir.root}/contentstore.deleted
 
 # ContentStore subsystem: default choice
