--- a/root/projects/solr/pom.xml
+++ b/root/projects/solr/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>alfresco-parent</artifactId>
         <groupId>org.alfresco</groupId>
-        <version>5.1.g.ecm4u.2</version>
+        <version>5.1.g.ecm4u.3-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-legacy-lucene</artifactId>
-            <version>5.1.g.ecm4u.2</version>
+            <version>5.1.g.ecm4u.3-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.lucene</groupId>
