--- a/root/packaging/pom.xml
+++ b/root/packaging/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.alfresco</groupId>
         <artifactId>alfresco-parent</artifactId>
-        <version>5.2.g.ecm4u.2-SNAPSHOT</version>
+        <version>5.2.g.ecm4u.2</version>
     </parent>
     <artifactId>alfresco-packaging</artifactId>
     <packaging>pom</packaging>
