--- a/root/projects/file-transfer-receiver/pom.xml
+++ b/root/projects/file-transfer-receiver/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>alfresco-parent</artifactId>
         <groupId>org.alfresco</groupId>
-        <version>5.2.g.ecm4u.2-SNAPSHOT</version>
+        <version>5.2.g.ecm4u.2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <packaging>war</packaging>
