--- a/root/projects/sdk/alfresco-platform-distribution/pom.xml
+++ b/root/projects/sdk/alfresco-platform-distribution/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <artifactId>alfresco-parent</artifactId>
     <groupId>org.alfresco</groupId>
-    <version>5.2.g.ecm4u.2-SNAPSHOT</version>
+    <version>5.2.g.ecm4u.2</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
   
