--- a/root/projects/server-root/pom.xml
+++ b/root/projects/server-root/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>alfresco-parent</artifactId>
         <groupId>org.alfresco</groupId>
-        <version>5.2.g.ecm4u.2</version>
+        <version>5.2.g.ecm4u.3-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>alfresco-server-root</artifactId>
